--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@yozdil/lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "A mini clone of the [Lodash](https://lodash.com) library.",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "test"
@@ -22,5 +22,9 @@
   "devDependencies": {
     "chai": "^4.3.0",
     "mocha": "^8.2.1"
+  },
+  "dependencies": {
+    "lotide": "^1.0.1",
+    "my-package": "^0.0.0"
   }
 }
